# TeacupRenderer

./: CG大作业报告.docx  CMakeLists.txt  README.md
include/: camera.h  model.h  shader.h
resources/configs/: petal.plist
shaders/: fs.shader  vs.shader
shaders/bezier/: vs.shader
shaders/circle/: fs.shader  vs.shader
shaders/cylinder/: fs.shader  vs.shader
shaders/line/: vs.shader
shaders/particle/: fs.shader  vs.shader
shaders/sprite/: fs.shader  vs.shader
src/: BasicGUI.cpp  BasicGUI.h  BezierLine.cpp  BezierLine.h  CircleRender.cpp  CircleRender.h  CubeRender.cpp  CubeRender.h  CubeTexture.cpp  CubeTexture.h  CylinderRender.cpp  CylinderRender.h  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  SkyboxRender.cpp  SkyboxRender.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h  draw.cpp  draw.h  imgui.ini  main.cpp  mathComputation.hpp  model.cpp  point.cpp  point.h  settings.h
src/ParticleSystem/: Common.h  Math.cpp  Math.h  Particle.h  ParticleDescription.h  ParticleEffect.cpp  ParticleEffect.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleMemory.cpp  ParticleMemory.h  ParticleSystem.cpp  ParticleSystem.h  PathHelper.cpp  PathHelper.h  Random.cpp  Random.h
src/imgui/examples/example_android_opengl3/: CMakeLists.txt
src/imgui/examples/example_glfw_opengl3/: imgui.ini
src/imgui/examples/example_glfw_opengl3/Debug/: example_glfw_opengl3.exe.recipe  example_glfw_opengl3.ilk  example_glfw_opengl3.vcxproj.FileListAbsolute.txt  vc142.idb
src/imgui/examples/example_glfw_vulkan/: CMakeLists.txt
(+17 files in other folders)
